swagger AUTH + Refresh
