# docs/swagger.json
@@ -59,6 +59,15 @@
                         "description": "Код багажа",
                         "name": "searchCode",
                         "in": "query"
+                    },
+                    {
+                        "description": "Пользовательский объект в формате JSON",
+                        "name": "baggage",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.BaggageRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -405,7 +414,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Список багажей",
+                        "description": "Список доставок",
                         "schema": {
                             "$ref": "#/definitions/model.DeliveryRequest"
                         }
@@ -681,8 +690,10 @@
                     "200": {
                         "description": "Успешный ответ",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.User"
+                            }
                         }
                     },
                     "400": {
@@ -761,6 +772,88 @@
                 }
             }
         },
+        "/user/logout": {
+            "post": {
+                "description": "Выход пользователя из системы и удаление токена из куков",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Пользователь"
+                ],
+                "summary": "Выход пользователя",
+                "responses": {
+                    "200": {
+                        "description": "Успешный ответ",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Неверный запрос",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/user/refreshtoken": {
+            "post": {
+                "description": "Обновление пары токенов",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Пользователь"
+                ],
+                "summary": "Обновление токенов",
+                "responses": {
+                    "200": {
+                        "description": "Успешный ответ",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Неверный запрос",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Внутренняя ошибка сервера",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/user/register": {
             "post": {
                 "description": "Регистрация нового пользователя с предоставленной информацией.",
@@ -781,7 +874,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/model.UserRegisterRequest"
                         }
                     }
                 ],
@@ -789,7 +882,10 @@
                     "201": {
                         "description": "Успешно зарегистрированный пользователь",
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.User"
+                            }
                         }
                     }
                 }
@@ -830,6 +926,39 @@
                 "photo": {
                     "type": "string",
                     "example": "http://example.com/baggage.jpg"
+                },
+                "size": {
+                    "type": "string",
+                    "example": "large"
+                },
+                "weight": {
+                    "type": "number",
+                    "example": 23.5
+                }
+            }
+        },
+        "model.BaggageRequest": {
+            "type": "object",
+            "properties": {
+                "airline": {
+                    "type": "string",
+                    "example": "AirlineX"
+                },
+                "baggage_code": {
+                    "type": "string",
+                    "example": "ABC123"
+                },
+                "baggage_type": {
+                    "type": "string",
+                    "example": "suitcase"
+                },
+                "owner_name": {
+                    "type": "string",
+                    "example": "John Doe"
+                },
+                "pasport_details": {
+                    "type": "string",
+                    "example": "123456789"
                 },
                 "size": {
                     "type": "string",
@@ -930,6 +1059,17 @@
                 }
             }
         },
+        "model.Role": {
+            "type": "string",
+            "enum": [
+                "пользователь",
+                "модератор"
+            ],
+            "x-enum-varnames": [
+                "UserRole",
+                "ModeratorRole"
+            ]
+        },
         "model.User": {
             "type": "object",
             "properties": {
@@ -943,7 +1083,7 @@
                     "type": "string"
                 },
                 "role": {
-                    "type": "string"
+                    "$ref": "#/definitions/model.Role"
                 },
                 "user_id": {
                     "type": "integer"
@@ -954,6 +1094,20 @@
             "type": "object",
             "properties": {
                 "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.UserRegisterRequest": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "full_name": {
                     "type": "string"
                 },
                 "password": {
